--- a/sample/session-expired-401/pom.xml
+++ b/sample/session-expired-401/pom.xml
@@ -16,12 +16,6 @@
 
 	<dependencies>
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-
-		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<version>${gwt.version}</version>
@@ -88,9 +82,14 @@
 		<outputDirectory>target/${artifactId}/WEB-INF/classes</outputDirectory>
 		<plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/session-expired</path>
+					<warSourceDirectory>target/session-expired-401</warSourceDirectory>
+					<staticContextPath>/session-expired-401</staticContextPath>
+				</configuration>
             </plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -102,14 +101,12 @@
 						<goals>
 							<goal>generateAsync</goal>
 							<goal>compile</goal>
+							<goal>test</goal>
 						</goals>
 					</execution>
 				</executions>
                 <configuration>
-                    <hostedWebapp>target/${artifactId}</hostedWebapp>
-                    <modules>
-                        <module>org.gspring.mvc.sample.application.Application</module>
-                    </modules>
+					<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
                 </configuration>
 			</plugin>
 			<plugin>
@@ -118,14 +115,6 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-		        <groupId>org.mortbay.jetty</groupId>
-		        <artifactId>maven-jetty-plugin</artifactId>
-				<configuration>
-					<contextPath >/rpc-security-sample</contextPath >
-					<webAppSourceDirectory>target/session-expired</webAppSourceDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
